crates/htui/tests/snapshots/queue_settings__demo.snap
---
source: crates/htui/tests/queue_settings.rs
expression: frame
---
project vulkan-tutorials
  run cap         unbounded
  batch cap       unbounded
all boxes
  min budget      none
  max concurrent  2 (default)
  window          not set · stored, not enforced
this box (DESKTOP-HTUI)
  max concurrent  2



















a run whose agent reports no USD cost is never capped (unknown is unbounded)
j/k · e edit · r reload
