crates/htui/tests/snapshots/queue_settings__invalid.snap
---
source: crates/htui/tests/queue_settings.rs
expression: frame
---
project vulkan-tutorials
  run cap         unbounded
  batch cap       unbounded
all boxes
  min budget      none
  max concurrent  2 (default)
  window          not set · stored, not enforced
this box (DESKTOP-HTUI)
  max concurrent  2


















a run whose agent reports no USD cost is never capped (unknown is unbounded)
batch cap (USD): 1.2345678
Enter save · Esc cancel · empty clears · at most six decimals: a micro-dollar is the smallest unit
