crates/htui/tests/snapshots/queue_settings__offline.snap
---
source: crates/htui/tests/queue_settings.rs
expression: frame
---
queue settings unavailable: this box browses its read-only cache and starts no run




























r reload
